# hit

./: .gitignore  Makefile  README.md  README.org  dune-project
lib/: analyzer.ml  config.ml  config.mli  doc.ml  doc.mli  doc_table.ml  doc_table.mli  document.ml  document.mli  dune  hash.ml  hit.ml  hit.mli  index.ml  index.mli  io.ml  io.mli  model.ml  ref.mli  reference.ml  reference.mli  score.ml  storage.ml  storage.mli  table.ml  table.mli  term.ml  term.mli  term_table.ml  text.ml  text.mli  token.ml  token.mli  util.ml  util.mli  view.ml  view.mli
test/: dune  io_helper.ml  test_analyzer.ml  test_hash.ml  test_index.ml  test_io.ml  test_register.ml  test_score.ml  test_storage.ml  test_term.ml  test_text.ml  test_token.ml  test_util.ml  test_view.ml
